<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/title_information"
            android:textColor="@color/red"
            android:textSize="50sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/title_coronavirus_covid_19"
            android:textColor="@color/theme"
            android:textSize="70sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:background="@color/theme"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/title_recommandations"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>
</LinearLayout>