<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="100"
    android:baselineAligned="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <GridLayout
        android:layout_margin="20dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:textSize="@dimen/large_text_size"
            android:id="@+id/protective_measure"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="100"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
                <TextView
                    android:layout_weight="70"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/protective"
                    android:textColor="@color/theme"/>
                <ImageView
                    android:layout_weight="15"
                    android:rotation="180"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:textSize="@dimen/large_text_size"
            android:id="@+id/wash_hand"
            android:layout_margin="5dp"
            android:layout_column="1"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:background="@drawable/button">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="100"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
                <TextView
                    android:layout_weight="70"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/wash"
                    android:textColor="@color/theme"/>
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:rotation="180"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:textSize="@dimen/large_text_size"
            android:id="@+id/mask"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:background="@drawable/button">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="100"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
                <TextView
                    android:layout_weight="70"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/mask"
                    android:textColor="@color/theme"/>
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:rotation="180"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:textSize="@dimen/large_text_size"
            android:id="@+id/symptom"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@drawable/button">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="100"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
                <TextView
                    android:layout_weight="70"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/symptoms"
                    android:textColor="@color/theme"/>
                <ImageView
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:rotation="180"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_quote"/>
            </LinearLayout>
        </FrameLayout>
    </GridLayout>
    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="140dp"
        android:background="@drawable/ic_color_circle"
        android:layout_height="140dp">
        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:background="@drawable/circle"
            android:layout_height="120dp">
            <ImageView
                android:id="@+id/micro"
                android:layout_margin="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_micro"/>
        </FrameLayout>
    </FrameLayout>
</FrameLayout>